k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: credit-scoring
  labels:
    app: credit-scoring
spec:
  selector:
    app: credit-scoring
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
